--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -16,6 +16,34 @@ h4{font-size: 1.8rem; letter-spacing: -.05rem; line-height: 1.5}
 h5{font-size: 1.6rem; letter-spacing: 0; line-height: 1.4}
 h6{font-size: 1.4rem; letter-spacing: 0; line-height: 1.2}
 
+.panel.header{
+  position: relative;
+  padding: 3px 10px 3px;
+  font-size: 1.2rem;
+  background-color: #eeeeee;
+  border: 1px solid #DDD;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  display: -webkit-flex; 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; 
+}
+
+.panel.body{
+  font-size: 1.4rem;
+  position: relative;
+  padding: 10px 10px 10px;
+  background-color: white;
+  border: 1px solid #eee;
+  border-top: 0px;
+  -webkit-border-radius: 0 0 4px 4px;
+  -moz-border-radius: 0 0 4px 4px;
+  border-radius: 0 0 4px 4px;
+  margin-bottom: 10px;
+}
+
 .container{
   margin: 0 auto;
   max-width: 80.0rem;
